--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bp-gsi-ui",
-  "version": "0.1.3-beta-1",
+  "name": "gsi-vx-ui",
+  "version": "0.1.1-beta-1",
   "description": "UI Interface for Vertrax projects",
   "author": "gsi-chao",
   "license": "MIT",
