--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.20",
     "@types/react-dom": "16.0.11",
+    "@types/styled-components": "^4.1.8",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0",
+    "styled-components": "^4.1.3",
     "typescript": "3.2.4"
   },
   "scripts": {
@@ -54,18 +58,21 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react-test-renderer": "^16.0.3",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.2.0",
-    "tslint": "^5.12.1",
-    "tslint-config-airbnb": "^5.7.0",
-    "tslint-config-prettier": "^1.9.0",
     "husky": "^1.3.1",
+    "jest-styled-components": "^6.3.1",
     "lint-staged": "^8.1.3",
     "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0"
+    "pretty-quick": "^1.10.0",
+    "react-test-renderer": "^16.7.0",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.7.0",
+    "tslint-config-prettier": "^1.9.0"
   },
   "lint-staged": {
     "*.{js,jsx}": [
