--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@blueprintjs/core": "^3.12.0",
     "@blueprintjs/datetime": "^3.7.1",
+    "@blueprintjs/select": "^3.6.1",
     "@blueprintjs/table": "^3.4.1",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.18",
