feat: Add Form Field Using FormState - Added Basic Select Field. - Added Checkbox Field. - Added Input Field. - Added Numeric Field. - Added Tag Field. - Added TextArea Field.
Pending by test all except Input Field

--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "@types/react": "16.7.20",
     "@types/react-dom": "16.0.11",
     "@types/styled-components": "^4.1.8",
+    "@types/validator": "^10.9.0",
+    "formstate": "^1.0.2",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3",
-    "typescript": "3.2.4"
+    "typescript": "3.2.4",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,12 +64,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/enzyme": "^3.1.18",
+    "@types/enzyme-adapter-react-16": "^1.0.4",
     "@types/react-test-renderer": "^16.0.3",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "husky": "^1.3.1",
     "jest-styled-components": "^6.3.1",
     "lint-staged": "^8.1.3",
