--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@blueprintjs/datetime": "^3.7.1",
     "@blueprintjs/select": "^3.6.1",
     "@blueprintjs/table": "^3.4.1",
+    "@types/react-color": "^2.14.1",
     "formstate": "^1.0.2",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
     "react": "^16.8.3",
+    "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
