--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-vx-ui",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "UI Interface for Vertrax projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -20,12 +20,16 @@
     "@blueprintjs/datetime": "^3.7.1",
     "@blueprintjs/select": "^3.6.1",
     "@blueprintjs/table": "^3.4.1",
+    "@types/lodash": "^4.14.122",
+    "@types/react-beautiful-dnd": "^10.0.3",
     "@types/react-color": "^2.14.1",
     "formstate": "^1.0.2",
+    "lodash": "^4.17.11",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
     "react": "^16.8.3",
+    "react-beautiful-dnd": "^10.0.4",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
     "semantic-ui-css": "^2.4.1",
