--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/lodash": "^4.14.122",
     "@types/react-beautiful-dnd": "^10.0.3",
     "@types/react-color": "^2.14.1",
+    "@types/react-resize-detector": "^3.1.1",
     "formstate": "^1.0.2",
     "lodash": "^4.17.11",
     "mobx": "^5.9.0",
@@ -32,6 +33,7 @@
     "react-beautiful-dnd": "^10.0.4",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
+    "react-resize-detector": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3",
