--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-vx-ui",
-  "version": "0.3.1",
+  "version": "0.3.1-beta2",
   "description": "UI Interface for Vertrax projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -25,6 +25,8 @@
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0",
     "react": "^16.8.3",
     "react-beautiful-dnd": "^10.0.4",
     "react-color": "^2.17.0",
