--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-beautiful-dnd": "^10.0.4",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
+    "react-pose": "^4.0.8",
     "react-resize-detector": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
