added- Added hierarchy component to the library - Added support for create a datasource, click nodes, drag nodes

--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@blueprintjs/datetime": "^3.7.1",
     "@blueprintjs/select": "^3.6.1",
     "@blueprintjs/table": "^3.4.1",
+    "@types/jquery": "^3.3.29",
     "formstate": "^1.0.2",
+    "jquery": "^3.4.0",
     "lodash": "^4.17.11",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
+    "orgchart": "^2.1.2",
     "react": "^16.8.3",
     "react-beautiful-dnd": "^10.0.4",
     "react-color": "^2.17.0",
