--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-vx-ui",
-  "version": "0.3.5-beta5",
+  "version": "0.3.5-beta6",
   "description": "UI Interface for Vertrax projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -21,22 +21,22 @@
     "@blueprintjs/select": "^3.8.0",
     "@blueprintjs/table": "^3.5.0",
     "@types/jquery": "^3.3.29",
-    "formstate": "^1.2.0",
-    "jquery": "^3.4.0",
+    "formstate": "^1.3.0",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
-    "mobx": "^5.9.0",
+    "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
     "orgchart": "^2.1.2",
-    "react": "^16.8.3",
-    "react-beautiful-dnd": "^10.0.4",
-    "react-color": "^2.17.0",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.6",
+    "react-beautiful-dnd": "^10.1.1",
+    "react-color": "^2.17.3",
+    "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
-    "react-resize-detector": "^4.0.5",
+    "react-resize-detector": "^4.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
-    "styled-components": "^4.1.3",
+    "styled-components": "^4.2.0",
     "validator": "^10.11.0"
   },
   "scripts": {
@@ -64,43 +64,43 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "7.1.6",
+    "@babel/core": "7.4.4",
     "@babel/plugin-syntax-json-strings": "^7.2.0",
     "@svgr/webpack": "2.4.1",
-    "@types/enzyme": "^3.1.18",
-    "@types/enzyme-adapter-react-16": "^1.0.4",
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "23.3.13",
-    "@types/lodash": "^4.14.122",
-    "@types/node": "10.12.18",
+    "@types/lodash": "^4.14.124",
+    "@types/node": "10.14.6",
     "@types/react": "16.7.20",
-    "@types/react-beautiful-dnd": "^10.0.3",
-    "@types/react-color": "^2.14.1",
+    "@types/react-beautiful-dnd": "^10.1.2",
+    "@types/react-color": "^2.17.0",
     "@types/react-dom": "16.0.11",
     "@types/react-resize-detector": "^3.1.1",
-    "@types/react-test-renderer": "^16.0.3",
-    "@types/styled-components": "^4.1.8",
-    "@types/validator": "^10.9.0",
+    "@types/react-test-renderer": "^16.8.1",
+    "@types/styled-components": "^4.1.14",
+    "@types/validator": "^10.11.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "7.0.0-bridge.0",
+    "babel-core": "6.26.3",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
-    "babel-plugin-named-asset-import": "^0.3.0",
+    "babel-loader": "8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^7.0.0",
+    "babel-preset-react-app": "^7.0.2",
     "babel-preset-stage-2": "^6.24.1",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
+    "chalk": "1.1.3",
     "cross-env": "^5.2.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-adapter-react-16": "^1.12.1",
     "eslint": "5.6.0",
-    "eslint-config-react-app": "^3.0.6",
+    "eslint-config-react-app": "^3.0.8",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
@@ -108,7 +108,7 @@
     "eslint-plugin-react": "7.11.1",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
-    "fs-extra": "7.0.0",
+    "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "husky": "^1.3.1",
     "identity-obj-proxy": "3.0.0",
@@ -116,7 +116,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "jest-styled-components": "^6.3.1",
-    "lint-staged": "^8.1.3",
+    "lint-staged": "^8.1.6",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
@@ -124,18 +124,18 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
-    "prettier": "^1.16.4",
+    "prettier": "^1.17.0",
     "pretty-quick": "^1.10.0",
-    "react-app-polyfill": "^0.2.0",
-    "react-dev-utils": "^7.0.1",
-    "react-test-renderer": "^16.7.0",
-    "resolve": "1.8.1",
+    "react-app-polyfill": "^0.2.2",
+    "react-dev-utils": "^7.0.5",
+    "react-test-renderer": "^16.8.6",
+    "resolve": "1.10.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
-    "tslint": "^5.12.1",
-    "tslint-config-airbnb": "^5.7.0",
-    "tslint-config-prettier": "^1.9.0",
+    "tslint": "^5.16.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "3.2.4",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
