--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-vx-ui",
-  "version": "0.3.5-beta6",
+  "version": "0.3.6",
   "description": "UI Interface for Vertrax projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -10,17 +10,14 @@
   "files": [
     "lib"
   ],
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@blueprintjs/core": "^3.15.1",
     "@blueprintjs/datetime": "^3.9.0",
     "@blueprintjs/select": "^3.8.0",
     "@blueprintjs/table": "^3.5.0",
     "@types/jquery": "^3.3.29",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
@@ -34,8 +31,6 @@
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.2.0",
     "validator": "^10.11.0"
   },
@@ -54,100 +49,112 @@
       "pre-push": "npm run lint && npm test"
     }
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "@babel/core": "7.4.4",
+    "@babel/core": "7.4.3",
     "@babel/plugin-syntax-json-strings": "^7.2.0",
-    "@svgr/webpack": "2.4.1",
+    "@svgr/webpack": "4.1.0",
     "@types/enzyme": "^3.9.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "23.3.13",
+    "@types/jest": "^24.0.12",
     "@types/lodash": "^4.14.124",
-    "@types/node": "10.14.6",
-    "@types/react": "16.7.20",
+    "@types/node": "12.0.0",
+    "@types/react": "16.8.17",
     "@types/react-beautiful-dnd": "^10.1.2",
     "@types/react-color": "^2.17.0",
-    "@types/react-dom": "16.0.11",
+    "@types/react-dom": "16.8.4",
     "@types/react-resize-detector": "^3.1.1",
     "@types/react-test-renderer": "^16.8.1",
     "@types/styled-components": "^4.1.14",
     "@types/validator": "^10.11.0",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.3",
-    "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^7.0.2",
+    "babel-preset-react-app": "^9.0.0",
     "babel-preset-stage-2": "^6.24.1",
     "bfj": "6.1.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "camelcase": "^5.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "1.1.3",
     "cross-env": "^5.2.0",
-    "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
+    "css-loader": "2.1.1",
+    "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "5.6.0",
-    "eslint-config-react-app": "^3.0.8",
-    "eslint-loader": "2.1.1",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-loader": "2.1.2",
     "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "file-loader": "2.0.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "file-loader": "3.0.1",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-alpha.2",
+    "html-webpack-plugin": "4.0.0-beta.5",
     "husky": "^1.3.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
+    "is-wsl": "^1.1.0",
+    "jest": "24.7.1",
+    "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
+    "jest-resolve": "24.7.1",
     "jest-styled-components": "^6.3.1",
+    "jest-watch-typeahead": "0.3.0",
     "lint-staged": "^8.1.6",
-    "mini-css-extract-plugin": "0.4.3",
+    "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.1.0",
+    "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.3.1",
+    "postcss-normalize": "7.0.1",
+    "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.17.0",
     "pretty-quick": "^1.10.0",
-    "react-app-polyfill": "^0.2.2",
-    "react-dev-utils": "^7.0.5",
+    "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.1",
+    "react-dev-utils": "^9.0.1",
+    "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
-    "resolve": "1.10.1",
+    "resolve": "1.10.0",
     "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
-    "terser-webpack-plugin": "1.1.0",
+    "semver": "6.0.0",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.2.3",
+    "ts-pnp": "1.1.2",
     "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.2.4",
-    "url-loader": "1.1.1",
-    "webpack": "4.19.1",
-    "webpack-dev-server": "3.1.14",
+    "typescript": "3.4.5",
+    "url-loader": "1.1.2",
+    "webpack": "4.29.6",
+    "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "workbox-webpack-plugin": "4.2.0"
   },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "pretty-quick --staged",
-      "eslint src/ --fix",
-      "git add"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   },
   "jest": {
@@ -155,17 +162,15 @@
       "src/**/*.{js,jsx,ts,tsx}",
       "!src/**/*.d.ts"
     ],
-    "resolver": "jest-pnp-resolver",
     "setupFiles": [
-      "react-app-polyfill/jsdom"
+      "<rootDir>/src/setupTests.ts"
     ],
-    "setupTestFrameworkScriptFile": "<rootDir>/src/setupTests.tsx",
+    "setupFilesAfterEnv": [],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
+      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
     ],
-    "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
+    "testEnvironment": "jest-environment-jsdom-fourteen",
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
@@ -175,6 +180,7 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ],
+    "modulePaths": [],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
@@ -190,6 +196,15 @@
       "web.jsx",
       "jsx",
       "node"
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
     ]
   }
 }
