--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-vx-ui",
-  "version": "0.3.6",
+  "version": "0.3.6-beta2",
   "description": "UI Interface for Vertrax projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -17,7 +17,6 @@
     "@blueprintjs/select": "^3.8.0",
     "@blueprintjs/table": "^3.5.0",
     "@types/jquery": "^3.3.29",
-    "eslint-plugin-react-hooks": "^1.6.0",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
@@ -96,7 +95,7 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.5.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "3.0.1",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.1",
