feat: First Approach AgGrid Library

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@blueprintjs/select": "^3.8.0",
     "@blueprintjs/table": "^3.5.0",
     "@types/jquery": "^3.3.29",
+    "ag-grid-community": "^20.2.0",
+    "ag-grid-react": "^20.2.0",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
