feat: Home Docs Structure

--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
     "resolve": "1.10.0",
+    "rift-router": "^1.2.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
