--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gsi-vx",
-  "version": "0.3.7-beta8",
+  "name": "gsi-vx-ui",
+  "version": "0.3.7-beta9",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
-  "repository": "gsi-chao/gsi-vx",
+  "repository": "gsi-chao/gsi-vx-ui",
   "main": "lib/index.js",
   "types": "lib/types/index.d.ts",
   "files": [
