--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "gsi-vx-ui",
-  "version": "0.3.7-beta12",
+  "name": "gsi-ui",
+  "version": "0.1.0",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
-  "repository": "gsi-chao/gsi-vx-ui",
+  "repository": "gsi-chao/gsi-ui",
   "main": "lib/index.js",
   "types": "lib/types/index.d.ts",
   "files": [
     "lib"
   ],
   "dependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@blueprintjs/core": "^3.15.1",
     "@blueprintjs/datetime": "^3.9.0",
     "@blueprintjs/select": "^3.8.0",
@@ -21,6 +20,7 @@
     "ag-grid-enterprise": "^20.2.0",
     "ag-grid-react": "^20.2.0",
     "formstate": "^1.3.0",
+    "jest-watch-typeahead": "^0.3.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
@@ -33,6 +33,7 @@
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
+    "rxjs": "^6.5.2",
     "styled-components": "^4.2.0",
     "validator": "^10.11.0"
   },
@@ -53,8 +54,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
-    "@babel/plugin-syntax-json-strings": "^7.2.0",
-    "@svgr/webpack": "4.1.0",
     "@types/enzyme": "^3.9.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.12",
@@ -68,8 +67,7 @@
     "@types/react-test-renderer": "^16.8.1",
     "@types/styled-components": "^4.1.14",
     "@types/validator": "^10.11.0",
-    "@typescript-eslint/eslint-plugin": "1.6.0",
-    "@typescript-eslint/parser": "1.6.0",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "10.0.1",
@@ -80,17 +78,14 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^9.0.0",
     "babel-preset-stage-2": "^6.24.1",
-    "bfj": "6.1.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chalk": "1.1.3",
     "cross-env": "^5.2.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-loader": "2.1.2",
@@ -100,7 +95,6 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "3.0.1",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "husky": "^1.3.1",
@@ -108,11 +102,6 @@
     "is-wsl": "^1.1.0",
     "jest": "24.7.1",
     "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "24.7.1",
-    "jest-styled-components": "^6.3.1",
-    "jest-watch-typeahead": "0.3.0",
-    "lint-staged": "^8.1.6",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -129,9 +118,6 @@
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
     "resolve": "1.10.0",
-    "rift-router": "^1.2.0",
-    "sass-loader": "7.1.0",
-    "semver": "6.0.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
