feat: fixed handle copy and paste in table,       fixed selection in menu contextual

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_AGGRID_LICENCE = 'Evaluation_License-_Not_For_Production_Valid_Until_21_July_2019__MTU2MzY2MzYwMDAwMA==649ac524ed5998391b676a6619d7b7d4'
