--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.1.15",
+  "version": "0.1.15-beta1",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
+    "mobx-react-lite": "^1.4.1",
     "moment": "^2.24.0",
     "orgchart": "^2.1.2",
     "react": "^16.8.6",
