--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.1.13",
+  "version": "0.1.15-beta3",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -15,21 +15,25 @@
     "@blueprintjs/datetime": "^3.12.0",
     "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^3.7.0",
+    "@types/react-datepicker": "^2.8.1",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
+    "mobx-react-lite": "^1.4.1",
     "moment": "^2.24.0",
     "orgchart": "^2.1.2",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^10.1.1",
     "react-color": "^2.17.3",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
     "styled-components": "^4.2.0",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "classnames": "latest"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -49,10 +53,9 @@
   "devDependencies": {
     "@babel/core": "7.4.3",
     "@types/enzyme": "^3.9.1",
-    "@types/jquery": "^3.3.29",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "jest-watch-typeahead": "^0.3.1",
     "@types/jest": "^24.0.12",
+    "@types/jquery": "^3.3.29",
     "@types/lodash": "^4.14.124",
     "@types/node": "12.0.0",
     "@types/react": "16.8.17",
@@ -98,6 +101,7 @@
     "is-wsl": "^1.1.0",
     "jest": "24.7.1",
     "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-watch-typeahead": "^0.3.1",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
