--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.1.15-beta3",
+  "version": "0.1.15-beta4",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^3.7.0",
     "@types/react-datepicker": "^2.8.1",
+    "classnames": "latest",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
@@ -32,8 +33,7 @@
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
     "styled-components": "^4.2.0",
-    "validator": "^10.11.0",
-    "classnames": "latest"
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
