--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "react-beautiful-dnd": "^10.1.1",
     "react-color": "^2.17.3",
     "react-datepicker": "^2.8.0",
+    "react-dnd": "^9.3.4",
+    "react-dnd-html5-backend": "^9.3.4",
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
     "styled-components": "^4.2.0",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "react-rnd": "^10.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
