--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -34,9 +34,9 @@
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
+    "react-rnd": "^10.0.0",
     "styled-components": "^4.2.0",
-    "validator": "^10.11.0",
-    "react-rnd": "^10.0.0"
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
