--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^3.7.0",
     "@types/react-datepicker": "^2.8.1",
+    "@types/shortid": "^0.0.29",
     "classnames": "latest",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
@@ -35,6 +36,7 @@
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
     "react-rnd": "^10.0.0",
+    "shortid": "^2.2.15",
     "styled-components": "^4.2.0",
     "validator": "^10.11.0"
   },
