--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.6-beta5",
+  "version": "0.2.7",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
