--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsi-ui",
-  "version": "0.2.7",
+  "version": "0.2.8-beta1",
   "description": "UI Interface GSI Projects",
   "author": "gsi-chao",
   "license": "MIT",
@@ -36,8 +36,8 @@
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
-    "react-scrollbars-custom": "^4.0.20",
     "react-rnd": "^10.0.0",
+    "react-scrollbars-custom": "^4.0.20",
     "shortid": "^2.2.15",
     "styled-components": "^4.2.0",
     "validator": "^10.11.0"
