--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@blueprintjs/datetime": "^3.12.0",
     "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^3.7.0",
+    "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-datepicker": "^2.8.1",
     "classnames": "latest",
     "formstate": "^1.3.0",
@@ -32,6 +33,7 @@
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-resize-detector": "^4.1.3",
+    "react-scrollbars-custom": "^4.0.20",
     "styled-components": "^4.2.0",
     "validator": "^10.11.0"
   },
