fix(workflows): change workflow action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,24 @@ on:
   push:
     branches: [master, beta]
 
+env:
+  NODE_VERSION: '14.17.5'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node_version: ['14']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Install Dependencies
         run: yarn
